Fixed chosendinnerview. Added scroll to fix overflow when lots of ingredients or steps

--- a/scss/uke/chooseDinnerModal.scss
+++ b/scss/uke/chooseDinnerModal.scss
@@ -57,9 +57,16 @@
 
 .addWeek-ChooseDinnerView {
   height: 500px;
-  &>img {
-    width: 100px;
-    height: 100px;
+  text-align: right;
+  &>.ChooseDinnerView-scrollarea {
+    text-align: left;
+    overflow: auto;
+    height: 450px;
     margin-bottom: 10px;
+    &>img {
+      width: 100px;
+      height: 100px;
+      margin-bottom: 10px;
+    }
   }
 }
